refactor jdbd-mysql v36